--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "folio-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jeremiahdingal.github.io",
+  "homepage": "https://jeremiahdingal.github.io/website",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
