--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "folio-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jeremiahdingal.github.io/website",
+  "homepage": "https://jeremiahdingal.github.io/",
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -25,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
