--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "homepage": "https://jeremiahdingal.github.io/",
   "dependencies": {
     "react": "^16.7.0",
+    "react-desktop": "^0.3.8",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-gsap": "^1.2.0",
+    "react-scripts": "2.1.3",
+    "react-scrollmagic": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
