--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.7.0",
     "react-gsap": "^1.2.0",
     "react-scripts": "2.1.3",
-    "react-scrollmagic": "^2.1.0"
+    "react-scrollmagic": "^2.1.0",
+    "react-sticky": "^6.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
