--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-gsap": "^1.2.0",
     "react-scripts": "2.1.3",
     "react-scrollmagic": "^2.1.0",
-    "react-sticky": "^6.0.3"
+    "react-sticky-box": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
