--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-dom": "^16.7.0",
     "react-gsap": "^1.2.0",
     "react-scripts": "2.1.3",
-    "react-scrollmagic": "^2.1.0",
-    "react-sticky-box": "^0.8.0"
+    "react-scrollmagic": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
