--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-gsap": "^1.2.0",
     "react-ionicons": "^3.0.1",
     "react-scripts": "2.1.3",
-    "react-scrollmagic": "^2.1.0"
+    "react-scrollmagic": "^2.1.0",
+    "react-star-rating-component": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
